Implement flightcontrol steps 14-17 (JDK 26 preview: PEM, structured concurrency, lazy constants, primitive patterns)